--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,9 @@
 
         <!-- Section for additional elements -->
         <div class="other-elements">
-            <div class="other-element">Connect</div>
-            <div class="other-element">Select</div>
-            <div class="other-element">Sing</div>
+            <div class="other-element">1- Connect</div>
+            <div class="other-element">2- Pick</div>
+            <div class="other-element">3- Have fun!</div>
         </div>
     </div> <!-- End of container grid -->
 
