--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
             {% if session["user_id"] %}
 
             <li class="nav-item"> 
-                <a href="#" class="nav-link">
+                <a href="/login" class="nav-link">
                     <div class="nav-icon"></div>
                     <span class="link-text"> Login </span> 
                 </a>
@@ -49,7 +49,7 @@
             </li>
 
             <li class="nav-item"> 
-                <a href="#" class="nav-link">
+                <a href="/login" class="nav-link">
                     <div class="nav-icon"><i class="fa-brands fa-napster"></i></div>
                     <span id="link-text-padding" class="link-text"> Login </span> 
                 </a>
