--- a/templates/index.html
+++ b/templates/index.html
@@ -73,14 +73,14 @@
 
         <!-- Section for additional elements -->
         <div class="other-elements">
-            <div class="other-element">1- Connect</div>
-            <div class="other-element">2- Pick</div>
-            <div class="other-element">3- Have fun!</div>
+            <div class="other-element">1-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Connect</div>
+            <div class="other-element">2-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Pick</div>
+            <div class="other-element">3-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Have fun!</div>
         </div>
     </div> <!-- End of container grid -->
 
     <div class="register_link_bot">
-        <a href="#" class="last_element_login">Login</a>
+        <a href="/login" class="last_element_login">Login</a>
     </div>
 
 {% endblock %}
