correct scope add

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -200,7 +200,7 @@
         }
 
         .slider-nav a.active {
-            background-color: red; /* Highlight dot */
+            background-color: black; /* Highlight dot */
             opacity: 1; 
         }
 
