--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
         <!-- Section for additional elements -->
         <div class="other-elements">
             <div class="other-element">1-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Connect</div>
-            <div class="other-element">2-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Pick</div>
+            <div class="other-element">2-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Pick song</div>
             <div class="other-element">3-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Have fun!</div>
         </div>
     </div> <!-- End of container grid -->
