Implementation of a route where user can select playlist and song

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,9 @@
 
         <!-- Section for additional elements -->
         <div class="other-elements">
-            <div class="other-element">1-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Connect</div>
-            <div class="other-element">2-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Pick song</div>
-            <div class="other-element">3-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Have fun!</div>
+            <div class="other-element">1 - <div class="text-otherElement">Connect</div></div>
+            <div class="other-element">2 - <div class="text-otherElement">Pick song</div></div>
+            <div class="other-element">3 - <div class="text-otherElement">Have fun!</div></div>
         </div>
     </div> <!-- End of container grid -->
 
