--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -171,6 +171,10 @@
             transition: all 1s ease;
         }
 
+        .slider img {
+            -webkit-tap-highlight-color: rgba(0, 0, 255, 0.3); /* Blue with 30% opacity */
+        }
+
         .slider img:hover {
             opacity: 1; /* Reset opacity when hovered */
         }
@@ -292,13 +296,15 @@
             display: flex;
             flex-direction: column;
             align-self: center;
-            justify-self: flex-start;
-            justify-content: flex-start;
+            justify-self: center;
+            justify-content: center;
             row-gap: 4rem;
             flex-wrap: wrap;
             text-align: left;
-            margin-left: clamp(4rem, 10%, 7rem); 
-            padding-top: clamp(1.5rem, 5%, 4rem);
+        }
+
+        .text-otherElement {
+            display: inline;
         }
 
         /* Card Container */
@@ -309,6 +315,7 @@
             align-self: center;
             justify-self: center;
             justify-content: center;
+            transform: translateX(10%);
             align-items: flex-end;
             gap: clamp(2rem, 5%, 4rem);
     
@@ -407,7 +414,7 @@
         }
 
         .description > p {
-            mix-blend-mode: darken;
+            mix-blend-mode: multiply;
             padding-top: clamp(2.5rem, 1%, 3rem);
             font-size: clamp(2rem, 3%, 2.5rem);
             color: var(--text-secondary);
@@ -419,6 +426,13 @@
             background-color: transparent !important;
             font-size: clamp(2rem, 4%, 3rem);
             margin-top: 3%;
+        }
+
+
+        @media (max-width: 1222px) {
+            .container-card {
+                transform: translateX(0%);
+            }
         }
 
         /* Responsive Media Query */
@@ -597,4 +611,11 @@
         a.last_element_login:hover {
             color: #1DB954 !important;
             opacity: 1 !important;
+        }
+
+        #playlist_image {
+            width: 100%;   /* Ensure the image stretches across the entire width */
+            height: auto;  /* Maintain aspect ratio */
+            object-fit: cover; /* Ensures the image fills the space, cropping if necessary */
+            display: block;  /* Remove any space below the image */        
         }
