Fix the refresh token logic to refresh in the header call function

--- a/templates/selection.html
+++ b/templates/selection.html
@@ -7,5 +7,5 @@
 {% endblock %}
 
 {% block main %}
-        <img id="#playlist_image" src="{{ images_url }}">
+        <img id="playlist_image" src="{{ images_url }}">
 {% endblock %}
