--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link google Montserrat font-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Link css files -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <!-- Link js files-->
     {% block head %}
     {% endblock %}
     <!-- Link icon for the tab from awesome-font -->
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/napster-brands.png') }}">
-
     <!-- Link font-awsome to use they're logos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -25,46 +22,40 @@
     <!-- If user is login or !login display different options-->
     <nav class="navbar">
         <ul class="navbar-nav">
-            {% if session["user_id"] %}
+            
+            {% if session.get("is_authenticated", True) %}
 
-            <li class="nav-item"> 
-                <a href="/login" class="nav-link">
-                    <div class="nav-icon"></div>
-                    <span class="link-text"> Login </span> 
-                </a>
-            </li>
+                <li class="nav-item"> 
+                    <a href="/logout" class="nav-link">
+                        <div class="nav-icon"><i class="fa-solid fa-user-ninja"></i></div>
+                        <span class="link-text"> Logout </span> 
+                    </a>
+                </li>
 
-            <li class="nav-item"> 
-                <a href="#" class="nav-link">
-                    <div class="nav-icon"><i class="fa-regular fa-sun"></i></div>
-                </a>
-            </li>
+                <li class="nav-item"> 
+                    <a href="#" class="nav-link">
+                        <div class="nav-icon"><i class="fa-regular fa-sun"></i></div>
+                    </a>
+                </li>
+
             {% else %}
+            
+                <li class="nav-item"> 
+                    <a href="/login" class="nav-link">
+                        <div class="nav-icon"><i class="fa-brands fa-napster"></i></div>
+                        <span id="link-text-padding" class="link-text"> Login </span> 
+                    </a>
+                </li>
 
-            <li class="nav-item"> 
-                <a href="#" class="nav-link">
-                    <div class="nav-icon"><i class="fa-solid fa-user-ninja"></i></div>
-                    <span class="link-text"> Register </span> 
-                </a>
-            </li>
+                <li class="nav-item"> 
+                    <a href="#" class="nav-link">
+                        <div class="nav-icon"><i class="fa-regular fa-sun"></i></div>
+                    </a>
+                </li>
 
-            <li class="nav-item"> 
-                <a href="/login" class="nav-link">
-                    <div class="nav-icon"><i class="fa-brands fa-napster"></i></div>
-                    <span id="link-text-padding" class="link-text"> Login </span> 
-                </a>
-            </li>
-
-            <li class="nav-item"> 
-                <a href="#" class="nav-link">
-                    <div class="nav-icon"><i class="fa-regular fa-sun"></i></div>
-                </a>
-            </li>
             {% endif %}
-
         </ul>
     </nav>  
-
 
     <main>
         {% block main %}{% endblock %}
