--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -125,10 +125,12 @@
             display: block;
         }      
 
-        .playlists {
-            margin-top: 20rem;
+        .coverflow_playlist {
             display: flex;
-            align-items: center;
+            margin-top: 20rem;
+            max-width: 100%;
+            max-height: 25rem;
+            gap: 1rem;
             justify-content: center;
         }
 
