--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
     <div class="container_glass_box glass">
         <div class="text_glass">
-            <h1 id="title">DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> PLAYLISTS?</h1>
+            <h1 id="title">DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> SONGS?</h1>
         </div>
     </div>
     <div id="text_main_manual">
@@ -59,7 +59,7 @@
                     <div class="icon">2</div>
                     <div class="description">
                         <h4>Select Playlist</h4>
-                        <p>Choose your favorite playlist.</p>
+                        <p>Choose your favorite song.</p>
                     </div>
                 </div>
             </div>
