--- a/templates/selection.html
+++ b/templates/selection.html
@@ -11,6 +11,8 @@
 
         <h1 id="h1_playlist">User's Playlists</h1>
 
+        <input type="Search" id="search" placeholder="Search for a playlist" onkeyup="searchPlaylist()">1
+
         <div class="coverflow_playlist">
                 {% for image_url in playlist_images %}
                         <div class="playlist_image">
