--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -11,6 +11,7 @@
         * {
             margin: 0;
             padding: 0;
+
         }
 
 
@@ -24,19 +25,17 @@
             opacity: 0.1;
         }
 
-        /* prevent unexpected behaviour with the carrousel main page*/ 
-        html {
-            scroll-behavior: smooth;
-        }
-
         body {
+            width: 100%;
             color: var(--text-secondary);
+            overflow-x: hidden;
         }
 
         /* set margin of size of navbar*/
         main {
+            width: 100%;
             height: 100vh;
-            margin-top: 5.5rem;
+            margin-top: 3rem;
             background-color: var(--bg-secondary);  
         }
 
@@ -134,7 +133,64 @@
             justify-content: center;
         }
 
-        #h1_playlist {
-            padding-top: 150px;
-            text-align: center;
+
+        /* Search button style */
+        .form-container {
+            display: flex; 
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 7rem;
+        }
+        
+        .search-form {
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+            margin-left: 7rem;
+        }
+        
+        .search-container {
+            position: relative;
+            width: 30%;
+            max-width: 33rem;
+            display: flex; /* Use flexbox for layout */
+            align-items: center; /* Align items vertically */
+        }
+        
+        .ryuji_button {
+            width: 100%;
+            max-width: 31rem;
+            min-width: 15rem;
+            height: 3rem;
+            border-radius: 0.5em;
+            padding: 0 3.33rem; 
+            background-color: rgba(0, 0, 0, 0.3);
+            font-size: 1rem;
+            border: 0.13rem solid rgba(0, 155, 155, 0.7); 
+            color: white;
+        }
+        
+        .ryuji_button:focus {
+            outline: 0.155rem solid rgba(0, 155, 155, 0.7);
+            box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
+            border: none;
+        }
+        
+        .search-icon {
+            position: absolute;
+            top: 50%;
+            left: 1rem; 
+            transform: scaleX(-1) translateY(-50%); /* Flip on X axis, center Y axis */
+            transform-origin: center;
+            width: 1.5rem;
+            height: 1.5rem;
+            color: rgba(255, 255, 255, 0.3);
+            pointer-events: none;
+            transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
+        }
+        
+        .ryuji_button:focus + .search-icon {
+            color: rgba(0, 255, 255, 0.8); 
+            filter: drop-shadow(0 0 8px rgba(0, 255, 255, 0.8)); /* Glow effect on svg*/
         }
