--- a/templates/selection.html
+++ b/templates/selection.html
@@ -9,9 +9,16 @@
 
 {% block main %}
 
-        <h1 id="h1_playlist">User's Playlists</h1>
-
-        <input type="Search" id="search" placeholder="Search for a playlist" onkeyup="searchPlaylist()">1
+        <div class="form-container">
+                <form class="search-form" action="#" method="get">
+                        <div class="search-container">
+                        <input class="ryuji_button" autofocus required name="Query" placeholder="Search for Song / Playlist" type="text">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="search-icon">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                        </svg>
+                        </div> <!-- End of form-contained-->
+                </form> 
+        </div>
 
         <div class="coverflow_playlist">
                 {% for image_url in playlist_images %}
