--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -11,7 +11,7 @@
         * {
             margin: 0;
             padding: 0;
-
+            box-sizing: border-box;
         }
 
 
@@ -25,17 +25,19 @@
             opacity: 0.1;
         }
 
+
+        
         body {
             width: 100%;
+            height: auto;
             color: var(--text-secondary);
             overflow-x: hidden;
         }
 
-        /* set margin of size of navbar*/
         main {
+            padding-top: 5.5rem;
+            height: 100%;
             width: 100%;
-            height: 100vh;
-            margin-top: 3rem;
             background-color: var(--bg-secondary);  
         }
 
@@ -55,6 +57,8 @@
 
 
 
+
+
          /* Set a fix navbar with bottom border  */
         .navbar {
             height: 5.5rem;
@@ -62,7 +66,7 @@
             top: 0;
             position: fixed;
             background-color: var(--bg-primary);
-            border-bottom: 0.1rem solid rgba(142, 142, 142, 0.33);
+            border-bottom: 0.1rem solid rgba(8, 8, 8, 0.33);
             display: flex; 
             align-items: flex-start; 
             padding-top: 1rem;
@@ -84,7 +88,6 @@
         .nav-item:nth-child(1), .nav-item:nth-child(2) {
             margin: 0 1%;
         }
-
 
         .nav-item {
             height: 100%;
@@ -124,73 +127,269 @@
             display: block;
         }      
 
+
+
+
+
+
+        /* Set the style playlist */
         .coverflow_playlist {
             display: flex;
             margin-top: 10rem;
             max-width: 100%;
             max-height: 25rem;
-            gap: 1rem;
+            gap: 5rem;
             justify-content: center;
         }
+       
+        
 
 
-        /* Search button style */
-        .form-container {
+        /* User profile section */
+        .greetings_user {
+            font-family: "Gill Sans", sans-serif;
+            text-align: left;
+            margin-left: clamp(2rem, 4rem, 5rem); 
+            letter-spacing: 0.3rem;
+            color: rgba(255, 255, 255, 0.8); 
+          }
+          
+          .greetings_user > h1 {
+            font-size: clamp(2.5rem, 4rem, 6rem);
+            color: #1DB954;
+          }
+          
+          .greetings_user > h2 {
+            font-size: clamp(1rem, 2rem, 5rem);
+          }
+          
+          
+          
+          /* Profile section layout */
+          .user_profile_section {
+            margin-top: 4rem;
+            width: 100%;  
+            max-height: auto;
             display: flex; 
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 7rem;
-        }
-        
-        .search-form {
-            display: flex;
-            justify-content: flex-start;
+            align-items: center; 
+            justify-content: center; 
+          }
+          
+          /* Image section */
+          .spotify_pp_wrapper {
+            width: clamp(10rem, 50%, 15rem); 
+            aspect-ratio: 1 / 1; 
+            border-radius: 50%; 
+            border: 0.2rem solid #1DB954;
+            overflow: hidden;
+            z-index: 100;
+          }
+          
+          #spotify_pp {
             width: 100%;
-            margin-left: 7rem;
-        }
+            height: 100%;
+            object-fit: cover; 
+            border-radius: inherit; 
+            z-index: 10;
+          }
         
-        .search-container {
-            position: relative;
-            width: 30%;
-            max-width: 33rem;
-            display: flex; /* Use flexbox for layout */
-            align-items: center; /* Align items vertically */
-        }
-        
-        .ryuji_button {
-            width: 100%;
-            max-width: 31rem;
-            min-width: 15rem;
-            height: 3rem;
-            border-radius: 0.5em;
-            padding: 0 3.33rem; 
-            background-color: rgba(0, 0, 0, 0.3);
-            font-size: 1rem;
-            border: 0.13rem solid rgba(0, 155, 155, 0.7); 
-            color: white;
-        }
-        
-        .ryuji_button:focus {
-            outline: 0.155rem solid rgba(0, 155, 155, 0.7);
-            box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
-            border: none;
-        }
-        
-        .search-icon {
-            position: absolute;
-            top: 50%;
-            left: 1rem; 
-            transform: scaleX(-1) translateY(-50%); /* Flip on X axis, center Y axis */
-            transform-origin: center;
-            width: 1.5rem;
-            height: 1.5rem;
-            color: rgba(255, 255, 255, 0.3);
-            pointer-events: none;
-            transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
-        }
-        
-        .ryuji_button:focus + .search-icon {
-            color: rgba(0, 255, 255, 0.8); 
-            filter: drop-shadow(0 0 8px rgba(0, 255, 255, 0.8)); /* Glow effect on svg*/
-        }
+          .search-container { 
+              margin-left: 15rem;
+              position: relative;
+              min-width: 35rem;
+              max-width: 40rem;
+          }
+          
+          .ryuji_button {
+              width: 100%;
+              max-width: 31rem;
+              min-width: 15rem;
+              height: 3rem;
+              border-radius: 0.5em;
+              padding: 0 3.33rem; 
+              background-color: rgba(0, 0, 0, 0.3);
+              font-size: 1rem;
+              border: 0.13rem solid rgba(0, 155, 155, 0.7); 
+              color: white;
+          }
+          
+          .ryuji_button:focus {
+              outline: 0.155rem solid rgba(0, 155, 155, 0.7);
+              box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
+              border: none;
+          }
+          
+          .search-icon {
+              position: absolute;
+              top: 50%;
+              left: 1rem; 
+              transform: translateY(-50%); /* Flip on X axis, center Y axis */
+              transform-origin: center;
+              width: 1.5rem;
+              height: 1.5rem;
+              color: rgba(255, 255, 255, 0.3);
+              pointer-events: none;
+              transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
+          }
+          
+          .ryuji_button:focus + .search-icon {
+              color: rgba(0, 255, 255, 0.8); 
+              filter: drop-shadow(0 0 8px rgba(0, 255, 255, 0.8)); /* Glow effect on svg*/
+          }
+
+            
+            
+            @media screen and (max-width: 680px) {
+              
+              /* Profile section layout */
+              .user_profile_section {
+                margin: 2rem 0 0 2rem; /* margin top and left */
+              }
+              
+              .greetings_user {
+                margin-left: 3rem; 
+                letter-spacing: 0;
+              }
+            
+              .greetings_user > h1 {
+                font-size: clamp(4rem, 20%, 8rem);
+              }
+            
+              .greetings_user > h2 {
+                font-size: clamp(2rem, 15%, 4rem);
+              }
+              
+                /* Image section */
+              .spotify_pp_wrapper {
+                width: clamp(10rem, 20%, 15rem); 
+                aspect-ratio: 1 / 1; 
+              }
+            }
+            
+            
+            @media screen and (max-width: 500px) {
+              
+              /* Profile section layout */
+              .user_profile_section {
+                justify-content: center;
+                padding: 0;
+                margin: 3rem 0 0 0;
+              }
+              
+              .greetings_user {
+                margin-left: 2rem; 
+              }
+            
+              .greetings_user > h1 {
+                font-size: clamp(3rem, 20%, 5rem);
+              }
+            
+              .greetings_user > h2 {
+                font-size: clamp(2rem, 15%, 3rem);
+              }
+            }
+
+            .centered_wrapper_musicBox {
+              width: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+            
+            /* music box section Section */
+            .wrapper_containerPas {
+              height: 40rem;
+              width: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              margin-top: 10%;
+            }
+            
+            /* Grid Layout */
+            .grid_pas {
+              padding-inline: clamp(5rem, 10rem, 13rem);
+              width: 100%;
+              height: 100%;
+              display: grid;
+              row-gap: 5rem;
+              column-gap: 7rem;
+              grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr)); 
+              grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); 
+            }
+            
+            
+            
+
+
+
+
+            .music_box {
+              position: relative;
+              width: 100%;
+              height: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 2rem; 
+              /* border: 0.17rem solid hsla(210, 70%, 60%, 0.7);  */
+              box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8);
+              overflow: hidden;
+            }
+            
+            .music_box img {
+              position: relative;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              opacity: 0.6;
+              border-radius: inherit;
+            }
+            
+            /* Text inside carts */
+            .music_box .text {
+              text-align: center;
+              position: absolute;
+              color: white;
+              font-size: 2rem;
+              font-weight: bold;
+              text-transform: uppercase;
+              text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+              pointer-events: none;
+            }
+            
+            /* Grid Positioning */
+            .card1 { grid-column: 1 / 2; grid-row: 1 / 4; }
+            .card2 { grid-column: 2 / 4; grid-row: 1 / 3; }
+            .card3 { grid-column: 1 / 2; grid-row: 4 / 6; }
+            .card4 { grid-column: 2 / 4; grid-row: 3 / 6; }
+
+            
+            
+            /* Responsive Design */
+            @media (max-width: 850px) {
+              .grid_pas {
+                width: 100%;
+              }
+              
+              /* Box Styling */
+              .playlist_box {
+                box-shadow: 0 0 0.9rem hsl(209, 98%, 30%);
+              }
+            }
+            
+            @media (max-width: 600px) {
+              
+              .grid_pas {
+                padding: 0.5rem;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, min-max(2rem, 1fr));
+                justify-content: center;
+                align-items: center;
+                
+                .card1 { grid-column: 1 / 2; grid-row: 1 / 2; }
+                .card2 { grid-column: 2 / 3; grid-row: 1 / 2; }
+                .card3 { grid-column: 1 / 2; grid-row: 2 / 3; }
+                .card4 { grid-column: 2 / 3; grid-row: 2 / 3; }
+              }
+            }
