--- a/templates/selection.html
+++ b/templates/selection.html
@@ -9,16 +9,50 @@
 
 {% block main %}
 
-        <div class="form-container">
+
+        <div class="user_profile_section">
+                <div class="spotify_pp_wrapper">
+                        <img id="spotify_pp" src="https://images.unsplash.com/photo-1735809491847-1af1c3025b92?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Spotify Profile Picture">
+                </div>
+                <div class="greetings_user">
+                        <h2 class="greetings_user_text">Hello,</h2>
+                        <h1 class="greetings_user_text">USERS<h1>
+                </div>
+
                 <form class="search-form" action="#" method="get">
                         <div class="search-container">
-                        <input class="ryuji_button" autofocus required name="Query" placeholder="Search for Song / Playlist" type="text">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="search-icon">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-                        </svg>
+                                <input class="ryuji_button" autofocus autocomplete="off" autocapitalize="off" required name="Query" placeholder="Search for Song / Playlist" type="text">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="search-icon">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                                </svg>
                         </div> <!-- End of form-contained-->
                 </form> 
         </div>
+
+
+        <div class="wrapper_containerPas">
+                <div class="grid_pas">
+
+                        <div class="music_box card1">
+                                <img src="https://images.unsplash.com/photo-1616356607338-fd87169ecf1a?q=80&w=2070&auto=format&fit=crop" alt="Playlist">
+                                <div class="text">Playlist</div>
+                        </div>
+
+                        <div class="music_box card2">
+                                <img src="https://images.unsplash.com/photo-1595177663993-4849619ab1f8?q=80&w=1974&auto=format&fit=crop" alt="Liked Title">
+                                <div class="text">Liked Title</div>
+                        </div>
+
+                        <div class="music_box card3">
+                                <img src="https://images.unsplash.com/photo-1595177663993-4849619ab1f8?q=80&w=1974&auto=format&fit=crop" alt="Artist">
+                                <div class="text">Artist</div>
+                        </div>
+                        <div class="music_box card4">
+                                <img src="https://images.unsplash.com/photo-1616356607338-fd87169ecf1a?q=80&w=2070&auto=format&fit=crop" alt="Album">
+                                <div class="text">Album</div>
+                        </div>
+                </div> <!-- End of grid_pas-->
+        </div> <!-- End of wrapper_containerPas-->
 
         <div class="coverflow_playlist">
                 {% for image_url in playlist_images %}
