UI implementation with muiltiple choice to pick from E.g: Liked title, Playlist ext..

--- a/templates/selection.html
+++ b/templates/selection.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="greetings_user">
                         <h2 class="greetings_user_text">Hello,</h2>
-                        <h1 class="greetings_user_text">USERS<h1>
+                        <h1 class="greetings_user_text">USER<h1>
                 </div>
 
                 <form class="search-form" action="#" method="get">
