--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -30,7 +30,8 @@
         body {
             width: 100%;
             height: auto;
-            color: var(--text-secondary);
+            /* color: var(--text-secondary); */
+            color: #fff;
             overflow-x: hidden;
         }
 
