--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,7 @@
         }
 
         body {
-            color: var(--text-secondary);
+            color: rgba(255, 255, 255, 0.9);
         }
 
         /* set margin of size of navbar*/
@@ -139,8 +139,7 @@
             height: 50vh; 
             overflow: hidden;
             z-index: 1;
-            box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3), 
-                        inset 0 1px 3px rgba(255, 255, 255, 1);
+            box-shadow: 0 0 15rem rgba(255, 255, 255, 0.6);
         }
 
         .slider-wrap {
