--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,6 +11,7 @@
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
 
@@ -31,12 +32,12 @@
 
         body {
             color: rgba(255, 255, 255, 0.9);
+            background-color: var(--bg-secondary);  
         }
 
         /* set margin of size of navbar*/
         main {
             margin-top: 5.5rem;
-            background-color: var(--bg-secondary);  
         }
 
         /* Change width of the default scrollbar */
@@ -138,8 +139,8 @@
             width: 100%;
             height: 50vh; 
             overflow: hidden;
-            z-index: 1;
-            box-shadow: 0 0 15rem rgba(255, 255, 255, 0.6);
+            z-index: 100;
+            box-shadow: 0 0 1rem rgba(84, 116, 66, 0.281);
         }
 
         .slider-wrap {
@@ -285,7 +286,6 @@
             grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
             justify-items: center;
             align-items: center;
-            row-gap: clamp(3rem, 5%, 5rem);
         }
 
         /* Other Elements Section */
@@ -295,8 +295,9 @@
             display: flex;
             flex-direction: column;
             align-self: center;
-            justify-self: center;
-            justify-content: center;
+            justify-self: start;
+            justify-content: start;
+            transform: translateX(15%);
             row-gap: 4rem;
             flex-wrap: wrap;
             text-align: left;
@@ -305,6 +306,7 @@
         .text-otherElement {
             display: inline;
         }
+
 
         /* Card Container */
         .container-card {
@@ -322,6 +324,8 @@
 
         .card {
             opacity: 0.5;
+            background-size: cover;
+            background-position: center;
             position: relative;
             flex: 1 1 clamp(4rem, 25%, 5rem); /* Responsive shrinking */
             max-width: 4rem; /* Initial size */
@@ -331,17 +335,19 @@
             display: flex;
             justify-content: flex-start;
             align-items: flex-start;
-            margin: 0 0.5rem;
-            box-shadow: 10px 7px 13px -3px rgba(0, 0, 2, 0.2);
+            margin: 0 1rem;
+            box-shadow: 0px 25px 20px -20px rgba(40, 197, 66, 0.45);
             transition: all 0.6s cubic-bezier(0.28, 0, 0.33, 0.66);
-            background-size: cover;
-            background-position: center;
+
         }
 
         /* Expanded Card Styles */
         .card.expanded {
+            margin: 0.5rem;
+            transform: scale(1.05); /* Expanded size */
             max-width: 30rem; /* Expanded width */
             opacity: 1;
+            box-shadow: 0px 25px 20px -20px rgba(40, 197, 66, 0.65), inset 0 0 0 1px rgba(255, 255, 255, 0.1);
             transition: all 0.6s ease-in-out;
             margin-inline: auto;
         }
@@ -353,7 +359,7 @@
         /* Show Description in Expanded State */
         .card.expanded .description {
             opacity: 1 !important;
-            transform: translateY(0.5rem) !important;
+            transform: translateY(0.5rem) !important; /* Descr. Animation outside element to fix on top */
         }
 
         /* Card Heights and images*/
@@ -499,6 +505,8 @@
         @media (max-width: 768px) {
 
             .other-elements {
+                transform: translate(0%);
+                padding-top: 7rem;
                 margin: auto;
                 text-align: center;
             }
