--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -33,13 +33,13 @@
             /* color: var(--text-secondary); */
             color: #fff;
             overflow-x: hidden;
+            background-color: var(--bg-secondary);  
         }
 
         main {
             padding-top: 5.5rem;
             height: 100%;
             width: 100%;
-            background-color: var(--bg-secondary);  
         }
 
         /* Change width of the default scrollbar */
@@ -135,11 +135,11 @@
 
         /* Set the style playlist */
         .coverflow_playlist {
-            display: flex;
+            display: none;
             margin-top: 10rem;
             max-width: 100%;
             max-height: 25rem;
-            gap: 5rem;
+            gap: 1rem;
             justify-content: center;
         }
        
@@ -169,9 +169,10 @@
           /* Profile section layout */
           .user_profile_section {
             margin-top: 4rem;
-            width: 100%;  
-            max-height: auto;
-            display: flex; 
+            width: 50%;  
+            height: auto;
+            display: flex;
+            transform: translate(50%); 
             align-items: center; 
             justify-content: center; 
           }
@@ -195,29 +196,26 @@
           }
         
           .search-container { 
-              margin-left: 15rem;
+              width: clamp(3rem, 35rem, 35rem);
+              height: 4rem;
+              margin-left: clamp(3rem, 50%, 15rem);
               position: relative;
-              min-width: 35rem;
-              max-width: 40rem;
           }
           
-          .ryuji_button {
-              width: 100%;
-              max-width: 31rem;
-              min-width: 15rem;
-              height: 3rem;
-              border-radius: 0.5em;
-              padding: 0 3.33rem; 
-              background-color: rgba(0, 0, 0, 0.3);
-              font-size: 1rem;
-              border: 0.13rem solid rgba(0, 155, 155, 0.7); 
-              color: white;
-          }
-          
-          .ryuji_button:focus {
-              outline: 0.155rem solid rgba(0, 155, 155, 0.7);
-              box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
-              border: none;
+          .ryuji_button { 
+                height: 100%;
+                border-radius: 0.5em;
+                padding: 0 3.33rem; 
+                background-color: rgba(0, 0, 0, 0.3);
+                font-size: 1rem;
+                border: 0.13rem solid rgba(0, 155, 155, 0.7); 
+                color: white;
+            }
+            
+            .ryuji_button:focus {
+                outline: 0.155rem solid rgba(0, 155, 155, 0.7);
+                box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
+                border: none;
           }
           
           .search-icon {
@@ -290,6 +288,11 @@
               }
             }
 
+
+
+
+
+
             .centered_wrapper_musicBox {
               width: 100%;
               display: flex;
@@ -304,7 +307,7 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              margin-top: 10%;
+              margin-top: 5%;
             }
             
             /* Grid Layout */
@@ -319,22 +322,18 @@
               grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); 
             }
             
-            
-            
-
-
-
 
             .music_box {
               position: relative;
-              width: 100%;
+              width: 80%;
               height: 100%;
               display: flex;
               justify-content: center;
               align-items: center;
               border-radius: 2rem; 
-              /* border: 0.17rem solid hsla(210, 70%, 60%, 0.7);  */
-              box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8);
+              transform: translateX(20%);
+              border: 0.17rem solid hsla(210, 70%, 60%, 0.3); 
+              box-shadow: 0.5rem 0.8rem 1.5rem rgba(0, 155, 155, 0.7), inset 0 0 0.5rem rgba(0, 155, 155, 0.8);
               overflow: hidden;
             }
             
@@ -343,7 +342,7 @@
               width: 100%;
               height: 100%;
               object-fit: cover;
-              opacity: 0.6;
+              opacity: 1;
               border-radius: inherit;
             }
             
@@ -374,7 +373,7 @@
               }
               
               /* Box Styling */
-              .playlist_box {
+              .music_box {
                 box-shadow: 0 0 0.9rem hsl(209, 98%, 30%);
               }
             }
