Implementing UI for the selection route, missing cover flow when user select choice e.g: playlist/liked song...

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link google Montserrat font-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Link js files-->
+    <!-- Link js/css files-->
     {% block head %}
     {% endblock %}
     <!-- Link icon for the tab from awesome-font -->
