--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -14,6 +14,20 @@
             box-sizing: border-box;
         }
 
+        /* Change width of the default scrollbar */
+        body::-webkit-scrollbar {
+            width: 1rem;
+        }
+         /* Change the color of the track */
+        body::-webkit-scrollbar-track {
+            background: #1e1e24;
+        }
+         /* Change the thumb (scrollable part */
+        body::-webkit-scrollbar-thumb {
+            background: rgba(116, 105, 105, 0.3);
+            border-radius: 10px;
+        }
+
 
         hr {
             margin: 5% 0;
@@ -41,23 +55,6 @@
             height: 100%;
             width: 100%;
         }
-
-        /* Change width of the default scrollbar */
-        body::-webkit-scrollbar {
-            width: 1rem;
-        }
-         /* Change the color of the track */
-        body::-webkit-scrollbar-track {
-            background: #1e1e24;
-        }
-         /* Change the thumb (scrollable part */
-        body::-webkit-scrollbar-thumb {
-            background: rgba(116, 105, 105, 0.3);
-            border-radius: 10px;
-        }
-
-
-
 
 
          /* Set a fix navbar with bottom border  */
@@ -126,270 +123,290 @@
         .navbar:hover .link-text {
             margin-top: 0.59rem;
             display: block;
-        }      
+        }       
 
 
-
-
-
-
-        /* Set the style playlist */
-        .coverflow_playlist {
-            display: none;
-            margin-top: 10rem;
-            max-width: 100%;
-            max-height: 25rem;
-            gap: 1rem;
-            justify-content: center;
+        .user_profile_wrapper {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: auto; /* Adjust as needed */
         }
-       
-        
 
+        /* Profile section layout */
+        .user_profile_section {
+          width: 80%;  
+          height: auto;
+          display: flex;
+          align-items: center; 
+          justify-content: center;
+          margin-top: 5rem;
+        }
 
-        /* User profile section */
+        /* Image section */
+        .spotify_pp_wrapper {
+          width: clamp(10rem, 50%, 15rem); 
+          min-width: 10rem;
+          aspect-ratio: 1 / 1; 
+          border-radius: 50%; 
+          border: solid 3px rgba(240, 240, 240, 0.7); 
+          overflow: hidden;
+
+        }
+
+        .spotify_pp_wrapper img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover; 
+          border-radius: inherit; 
+        }
+
+        .search-form {
+          margin-left: 10rem;
+          height: 3.5rem;
+          width: min(35%, 35rem);
+        }
+
+        .search-container {
+          position: relative;
+          width: 100%;
+          height: 100%;
+        }
+
+        .ryuji_button {
+          width: 100%;
+          height: 100%;
+          border-radius: 0.5em;
+          padding: 0 3.33rem; 
+          background-color: rgba(0, 0, 0, 0.3);
+          font-size: 1rem;
+          border: 0.13rem solid rgba(0, 155, 155, 0.7); 
+          outline-color: transparent;
+          color: white;
+        }
+
+        .ryuji_button:focus {
+          outline: 0.155rem solid rgba(0, 155, 155, 0.7);
+          box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
+          border: none;
+        }
+
+        #search-icon {
+          position: absolute;
+          top: 50%;
+          left: 1rem; 
+          transform: translateY(-50%); /* Flip on X axis, center Y axis */
+          transform-origin: center;
+          width: 1.5rem;
+          height: 1.5rem;
+          color: rgba(255, 255, 255, 0.3);
+          pointer-events: none;
+          transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
+        }
+
+        #clear_button {
+          position: absolute;
+          top: 50%;
+          right: 1rem; 
+          transform: translateY(-50%); /* Flip on X axis, center Y axis */
+          transform-origin: center;
+          width: 2rem;
+          height: 2rem;
+          opacity: 0.6;
+          cursor: pointer; /* Changes cursor to indicate it's clickable */
+        }
+
+        /* Hover Effect */
+        #clear_button:hover {
+          opacity: 0.9; /* Makes it more visible when hovered */
+        }
+
+        .ryuji_button:focus + #search-icon {
+          color: rgba(0, 255, 255, 0.8); 
+          filter: drop-shadow(0px 0px 10px rgba(0, 255, 255, 0.8));
+        }
+
         .greetings_user {
-            font-family: "Gill Sans", sans-serif;
-            text-align: left;
-            margin-left: clamp(2rem, 4rem, 5rem); 
-            letter-spacing: 0.3rem;
-            color: rgba(255, 255, 255, 0.8); 
-          }
-          
-          .greetings_user > h1 {
-            font-size: clamp(2.5rem, 4rem, 6rem);
-            color: #1DB954;
-          }
-          
-          .greetings_user > h2 {
-            font-size: clamp(1rem, 2rem, 5rem);
-          }
-          
-          
-          
-          /* Profile section layout */
-          .user_profile_section {
-            margin-top: 4rem;
-            width: 50%;  
-            height: auto;
-            display: flex;
-            transform: translate(50%); 
-            align-items: center; 
-            justify-content: center; 
-          }
-          
-          /* Image section */
-          .spotify_pp_wrapper {
-            width: clamp(10rem, 50%, 15rem); 
-            aspect-ratio: 1 / 1; 
-            border-radius: 50%; 
-            border: 0.2rem solid #1DB954;
-            overflow: hidden;
-            z-index: 100;
-          }
-          
-          #spotify_pp {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; 
-            border-radius: inherit; 
-            z-index: 10;
-          }
+          font-family: "Gill Sans", sans-serif;
+          text-align: left;
+          margin-left: 2rem; 
+          letter-spacing: 0.3rem;
+          color: rgba(255, 255, 255, 0.8); 
+        }
+
+        .greetings_user > h1 {
+          transform: translateX(-0.2rem); /* Maintain proper alignment with the different sized h2 element */
+          font-size: clamp(3rem, 4rem, 4rem);
+          color: #1DB954;
+        }
+
+      .greetings_user > h2 {
+        font-size: clamp(2rem, 2rem, 3rem);
         
-          .search-container { 
-              width: clamp(3rem, 35rem, 35rem);
-              height: 4rem;
-              margin-left: clamp(3rem, 50%, 15rem);
-              position: relative;
-          }
-          
-          .ryuji_button { 
-                height: 100%;
-                border-radius: 0.5em;
-                padding: 0 3.33rem; 
-                background-color: rgba(0, 0, 0, 0.3);
-                font-size: 1rem;
-                border: 0.13rem solid rgba(0, 155, 155, 0.7); 
-                color: white;
-            }
-            
-            .ryuji_button:focus {
-                outline: 0.155rem solid rgba(0, 155, 155, 0.7);
-                box-shadow: 0 0 1rem rgba(0, 155, 155, 0.8); 
-                border: none;
-          }
-          
-          .search-icon {
-              position: absolute;
-              top: 50%;
-              left: 1rem; 
-              transform: translateY(-50%); /* Flip on X axis, center Y axis */
-              transform-origin: center;
-              width: 1.5rem;
-              height: 1.5rem;
-              color: rgba(255, 255, 255, 0.3);
-              pointer-events: none;
-              transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
-          }
-          
-          .ryuji_button:focus + .search-icon {
-              color: rgba(0, 255, 255, 0.8); 
-              filter: drop-shadow(0 0 8px rgba(0, 255, 255, 0.8)); /* Glow effect on svg*/
-          }
-
-            
-            
-            @media screen and (max-width: 680px) {
-              
-              /* Profile section layout */
-              .user_profile_section {
-                margin: 2rem 0 0 2rem; /* margin top and left */
-              }
-              
-              .greetings_user {
-                margin-left: 3rem; 
-                letter-spacing: 0;
-              }
-            
-              .greetings_user > h1 {
-                font-size: clamp(4rem, 20%, 8rem);
-              }
-            
-              .greetings_user > h2 {
-                font-size: clamp(2rem, 15%, 4rem);
-              }
-              
-                /* Image section */
-              .spotify_pp_wrapper {
-                width: clamp(10rem, 20%, 15rem); 
-                aspect-ratio: 1 / 1; 
-              }
-            }
-            
-            
-            @media screen and (max-width: 500px) {
-              
-              /* Profile section layout */
-              .user_profile_section {
-                justify-content: center;
-                padding: 0;
-                margin: 3rem 0 0 0;
-              }
-              
-              .greetings_user {
-                margin-left: 2rem; 
-              }
-            
-              .greetings_user > h1 {
-                font-size: clamp(3rem, 20%, 5rem);
-              }
-            
-              .greetings_user > h2 {
-                font-size: clamp(2rem, 15%, 3rem);
-              }
-            }
+      }
 
 
+      @media screen and (max-width: 1000px) {
+          /* 100vw for better spacing between elements */
+        .user_profile_section {
+          width: 95%;
+        }
+      }
+
+      @media screen and (max-width: 800px) {
+
+        .user_profile_section {
+          flex-direction: column;
+          align-items: center; 
+          justify-content: center; 
+          flex-wrap: wrap; /* Allows elements to move to the next line */
+          gap: 2rem;
+        }
+        
+        .spotify_pp_wrapper {
+          padding: 0;
+          margin: 0;
+        }
+
+        .search-form {
+          width: min(80%, 20rem); /* Ensures it doesn't exceed 90% of the screen width */
+          margin: 0;
+          order: 1; /* Push the form below */
+          margin-top: 2rem;
+        }
+        
+        .greetings_user {
+          width: 100%;
+          margin: 0;  
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          transform: translateX(0);
+        }
+      }
+
+      /* Set the style of the music box grid */
+      .centered_wrapper_musicBox {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      /* music box section Section */
+      .wrapper_containerPas {
+        height: 25rem;
+        width: 100%;
+        margin-top: 5%;
+      }
+      
+      /* Grid Layout */
+      .grid_pas {
+        margin-inline: auto;
+        width: 70%;
+        height: 100%;
+        display: grid;
+        row-gap: 5rem;
+        column-gap: 5rem;
+        grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr)); 
+        grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); 
+      }
+      
+
+      .music_box {
+        position: relative;
+        width: 100%;
+        min-width: 10rem;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 2rem;
+        align-self: center;
+        border: 0.17rem solid hsla(210, 30%, 50%, 0.263); 
+        box-shadow: 0.6rem 0.6rem 1rem rgba(0, 155, 155, 0.5), inset 0 0 0.5rem rgba(0, 155, 155, 0.5);
+        overflow: hidden;
+        transition: transform 0.3s;
+      }
+
+      .music_box:hover {
+        transform: translateY(-0.5rem);
+      }
+      
+      .music_box img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 1;
+        border-radius: inherit;
+      }
+      
+      /* Text inside carts */
+      .music_box .text {
+        text-align: center;
+        position: absolute;
+        color: white;
+        font-size: 2rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+        pointer-events: none;
+      }
+      
+      /* Grid Positioning */
+      .card1 { grid-column: 1 / 2; grid-row: 1 / 4; }
+      .card2 { grid-column: 2 / 4; grid-row: 1 / 3; }
+      .card3 { grid-column: 1 / 2; grid-row: 4 / 6; }
+      .card4 { grid-column: 2 / 4; grid-row: 3 / 6; }
 
 
+      /* Set the style playlist */
+      .coverflow_playlist {
+        display: none;
+        margin-top: 10rem;
+        max-width: 100%;
+        max-height: 25rem;
+        gap: 1rem;
+        justify-content: center;
+    }
 
+      
+      
+      /* Responsive Design */
+      @media (max-width: 850px) {
+        .grid_pas {
+          width: 100%;
+          row-gap: 2rem;
+        }
+        
+        /* Box Styling */
+        .music_box {
+          box-shadow: 0 0 0.9rem hsl(209, 98%, 30%);
+        }
+      }
+      
+      @media (max-width: 600px) {
+        .grid_pas {
+            padding: 1rem;
+            column-gap: 1rem;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
+            justify-content: center;
+            align-items: center;
+        }
 
-            .centered_wrapper_musicBox {
-              width: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-            }
-            
-            /* music box section Section */
-            .wrapper_containerPas {
-              height: 40rem;
-              width: 100%;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              margin-top: 5%;
-            }
-            
-            /* Grid Layout */
-            .grid_pas {
-              padding-inline: clamp(5rem, 10rem, 13rem);
-              width: 100%;
-              height: 100%;
-              display: grid;
-              row-gap: 5rem;
-              column-gap: 7rem;
-              grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr)); 
-              grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); 
-            }
-            
-
-            .music_box {
-              position: relative;
-              width: 80%;
-              height: 100%;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              border-radius: 2rem; 
-              transform: translateX(20%);
-              border: 0.17rem solid hsla(210, 70%, 60%, 0.3); 
-              box-shadow: 0.5rem 0.8rem 1.5rem rgba(0, 155, 155, 0.7), inset 0 0 0.5rem rgba(0, 155, 155, 0.8);
-              overflow: hidden;
-            }
-            
-            .music_box img {
-              position: relative;
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              opacity: 1;
-              border-radius: inherit;
-            }
-            
-            /* Text inside carts */
-            .music_box .text {
-              text-align: center;
-              position: absolute;
-              color: white;
-              font-size: 2rem;
-              font-weight: bold;
-              text-transform: uppercase;
-              text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-              pointer-events: none;
-            }
-            
-            /* Grid Positioning */
-            .card1 { grid-column: 1 / 2; grid-row: 1 / 4; }
-            .card2 { grid-column: 2 / 4; grid-row: 1 / 3; }
-            .card3 { grid-column: 1 / 2; grid-row: 4 / 6; }
-            .card4 { grid-column: 2 / 4; grid-row: 3 / 6; }
-
-            
-            
-            /* Responsive Design */
-            @media (max-width: 850px) {
-              .grid_pas {
-                width: 100%;
-              }
-              
-              /* Box Styling */
-              .music_box {
-                box-shadow: 0 0 0.9rem hsl(209, 98%, 30%);
-              }
-            }
-            
-            @media (max-width: 600px) {
-              
-              .grid_pas {
-                padding: 0.5rem;
-                display: grid;
-                grid-template-columns: repeat(auto-fit, min-max(2rem, 1fr));
-                justify-content: center;
-                align-items: center;
-                
-                .card1 { grid-column: 1 / 2; grid-row: 1 / 2; }
-                .card2 { grid-column: 2 / 3; grid-row: 1 / 2; }
-                .card3 { grid-column: 1 / 2; grid-row: 2 / 3; }
-                .card4 { grid-column: 2 / 3; grid-row: 2 / 3; }
-              }
-            }
+        .music_box {
+          border: 0.17rem solid hsla(210, 30%, 50%, 0.263); 
+          box-shadow: 0 0.3rem 1rem rgba(0, 155, 155, 0.3), inset 0 0 0.5rem rgba(0, 155, 155, 0.3);
+        }
+    
+        .card1 { grid-column: 1 / 2; grid-row: 1 / 2; }
+        .card2 { grid-column: 2 / 3; grid-row: 1 / 2; }
+        .card3 { grid-column: 1 / 2; grid-row: 2 / 3; }
+        .card4 { grid-column: 2 / 3; grid-row: 2 / 3; }
+    }
+    
