--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -338,13 +338,15 @@
             margin: 0 1rem;
             box-shadow: 0px 25px 20px -20px rgba(40, 197, 66, 0.45);
             transition: all 0.6s cubic-bezier(0.28, 0, 0.33, 0.66);
+        }
 
+        .card:hover {
+            transform: translateY(-1rem);
         }
 
         /* Expanded Card Styles */
         .card.expanded {
             margin: 0.5rem;
-            transform: scale(1.05); /* Expanded size */
             max-width: 30rem; /* Expanded width */
             opacity: 1;
             box-shadow: 0px 25px 20px -20px rgba(40, 197, 66, 0.65), inset 0 0 0 1px rgba(255, 255, 255, 0.1);
